log
Sun, May 18, 2025  4:39:30 PM: 
 sudoku.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
Sun, May 18, 2025  4:39:48 PM: 
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
6a38bc0
Sun, May 18, 2025  4:42:12 PM: 
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
f3efdac
Sun, May 18, 2025  4:43:11 PM: 
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
05f2d0c
Sun, May 18, 2025  4:43:25 PM: 
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
07054b4
Sun, May 18, 2025  4:44:42 PM: 
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
eb2a872
Sun, May 18, 2025  4:45:43 PM: 
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
2e15998
Sun, May 18, 2025  4:48:01 PM: 
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
124a301
Sun, May 18, 2025  6:54:06 PM: 
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
55b7a4f
Sun, May 18, 2025  6:54:55 PM: 
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
cc912b9
Sun, May 18, 2025  6:59:51 PM: 
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
c2bbf2d
Sun, May 18, 2025  7:00:16 PM: 
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
71d4062
Sun, May 18, 2025  7:00:55 PM: 
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
c35553d
Sun, May 18, 2025  7:07:16 PM: 
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
9e1fddb
Sun, May 18, 2025  7:08:56 PM: 
 tests:  0|5
total_score: 0/70
c4ada71
Sun, May 18, 2025  8:16:40 PM: 
 sudoku.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'is_valid':
sudoku.c:60:33: warning: comparison between pointer and integer
   60 |             if (aux->sudo[t][h] == lista){
      |                                 ^~
sudoku.c:63:41: error: passing argument 2 of 'pushFront' makes pointer from integer without a cast [-Wint-conversion]
   63 |             pushFront(lista,aux->sudo[t][h]);
      |                             ~~~~~~~~~~~~^~~
      |                                         |
      |                                         int
In file included from test.c:4:
list.h:22:34: note: expected 'void *' but argument is of type 'int'
   22 | void pushFront(List* list, void* data);
      |                            ~~~~~~^~~~
test.c: At top level:
test.c:7:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
1a405f1
Sun, May 18, 2025  8:35:08 PM: 
 sudoku.c | 46 +++++++++++++++++++++++++++++-----------------
 1 file changed, 29 insertions(+), 17 deletions(-)
 tests:  3|4
total_score: 20/70
e4d76cc
Sun, May 18, 2025  8:37:45 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bd667f4
Sun, May 18, 2025  9:03:16 PM: 
 sudoku.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  0|0
21d80f9
Sun, May 18, 2025 11:29:48 PM: 
 sudoku.c | 17 ++++++++++++-----
 1 file changed, 12 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'DFS':
sudoku.c:123:16: error: void value not ignored as it ought to be
  123 |     Node*aux = pop(D);
      |                ^~~
test.c: At top level:
test.c:7:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
8bfc4c7
Sun, May 18, 2025 11:33:15 PM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
27e0db1
